# DGL-PTM

./: .gitignore  README.md  environment.yaml
.github/workflows/: build.yml  build_macos_x64.yml  lint.yml
DGL_testing/: gpu_sample_run.py  scaletest.ipynb  scaletest_optmization.ipynb  testing.ipynb  testing_optimization.ipynb  testwithnn.yaml  version.md
DGL_testing/nn_data/both_PudgeFiveLayer_1024/0409_175055/: config.json
DGL_testing/nn_data/both_PudgeSixLayer_1024/0409_190204/: config.json
DGL_testing/nn_data/both_PudgeSixLayer_1024/0723_110813/: README.txt  config.json
DGL_testing/testwithnn/: testwithnn.yaml
DGL_testing/testwithnn/agent_data.zarr/: .zmetadata
DGL_testing/testwithnn/agent_data.zarr/alpha/: 0.3
DGL_testing/testwithnn/agent_data.zarr/cost/: 0.15
DGL_testing/testwithnn/agent_data.zarr/disposable_wealth/: .zarray  0.1  0.10  0.11  0.12  0.13  0.14  0.15  0.16  0.17  0.18  0.19  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data.zarr/gamma/: 0.5
DGL_testing/testwithnn/agent_data.zarr/i_a/: 0.0  0.1  0.10  0.11  0.12  0.13  0.14  0.15  0.16  0.17  0.18  0.19  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data.zarr/income/: 0.0  0.1  0.10  0.11  0.12  0.13  0.14  0.15  0.16  0.17  0.18  0.19  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data.zarr/lambda/: 0.14
DGL_testing/testwithnn/agent_data.zarr/m/: 0.0  0.1  0.10  0.11  0.12  0.13  0.14  0.15  0.16  0.17  0.18  0.19  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data.zarr/net_trade/: 0.1  0.10  0.11  0.12  0.13  0.14  0.15  0.16  0.17  0.18  0.19  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data.zarr/sensitivity/: 0.3
DGL_testing/testwithnn/agent_data.zarr/sigma/: 0.19
DGL_testing/testwithnn/agent_data.zarr/tec/: 0.0
DGL_testing/testwithnn/agent_data.zarr/theta/: 0.0  0.1  0.10  0.11  0.12  0.13  0.14  0.15  0.16  0.17  0.18  0.19  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data.zarr/wealth/: 0.0  0.1  0.10  0.11  0.12  0.13  0.14  0.15  0.16  0.17  0.18  0.19  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data.zarr/wealth_consumption/: 0.0  0.1  0.10  0.11  0.12  0.13  0.14  0.15  0.16  0.17  0.18  0.19  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data_25.zarr/: .zmetadata
DGL_testing/testwithnn/agent_data_25.zarr/alpha/: 0.6
DGL_testing/testwithnn/agent_data_25.zarr/cost/: .zarray  0.3
DGL_testing/testwithnn/agent_data_25.zarr/disposable_wealth/: 0.0  0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data_25.zarr/gamma/: 0.9
DGL_testing/testwithnn/agent_data_25.zarr/i_a/: 0.0  0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data_25.zarr/income/: 0.0  0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data_25.zarr/lambda/: 0.5
DGL_testing/testwithnn/agent_data_25.zarr/m/: 0.0  0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data_25.zarr/net_trade/: 0.0  0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data_25.zarr/ones/: 0.1
DGL_testing/testwithnn/agent_data_25.zarr/sensitivity/: 0.9
DGL_testing/testwithnn/agent_data_25.zarr/sigma/: 0.0
DGL_testing/testwithnn/agent_data_25.zarr/tec/: 0.7
DGL_testing/testwithnn/agent_data_25.zarr/tech_index/: .zarray  0.0  0.1  0.9
DGL_testing/testwithnn/agent_data_25.zarr/theta/: 0.0  0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data_25.zarr/total_weight/: 0.0  0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data_25.zarr/wealth/: 0.0  0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data_25.zarr/wealth_consumption/: 0.0  0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9
DGL_testing/testwithnn/agent_data_25.zarr/zeros/: 0.5
DGL_testing/testwithnn/edge_data/0.zarr/dest/: 0
DGL_testing/testwithnn/edge_data/13.zarr/: .zmetadata
DGL_testing/testwithnn/edge_data/4.zarr/: .zmetadata
DGL_testing/testwithnn/edge_data_25/9.zarr/: .zmetadata
Sensitivity_Analysis/: SaltelliSampleParams-n1024.csv  SampleGenerator.py  SensitivityAnalysis.py  SensitivityAnalysis.sh  beta_distribution.ipynb  testing_sa.ipynb
dgl_ptm/: .gitignore  README.dev.md  parse_config.py  pyproject.toml
dgl_ptm/dgl_ptm/: __init__.py  config.py  config.yaml
dgl_ptm/dgl_ptm/agent/: agent_update.py  capital_update.py  income_generation.py  wealth_consumption.py
dgl_ptm/dgl_ptm/agentInteraction/: trade_money.py  weight_update.py
dgl_ptm/dgl_ptm/model/: base_model.py  data_collection.py  initialize_model.py  pt_model.py  step.py
dgl_ptm/dgl_ptm/network/: global_attachment.py  link_deletion.py  local_attachment.py  local_attachment_basic_homophily.py  local_attachment_tensor.py  local_attachment_tensor_Vedit.py  network_creation.py  random_edge_noise.py
dgl_ptm/dgl_ptm/util/: matrix_utils.py  network_metrics.py  utils.py
dgl_ptm/dgl_ptm/util/nn_arch/: nn_arch.py  parse_config.py
dgl_ptm/tests/: test_agent.py  test_agent_interaction.py  test_config.py  test_model.py  test_model_run.py  test_network.py  test_util.py
docs/: running_dgl_ptm_on_snellius_with_gpu.md
(+164 files in other folders)
